fix(card): toggle stretch mode (#753)
* fix(card): toggle stretch mode

* chore(card): removed unnecessary comment

* Update packages/core/src/components/card/card.stories.tsx


* Update packages/core/src/components/card/card.stories.tsx


---------

--- a/packages/core/src/components/card/card.scss
+++ b/packages/core/src/components/card/card.scss
@@ -109,3 +109,27 @@ button {
     box-shadow: var(--tds-card-box-pressed);
   }
 }
+
+.below-header-stretch,
+.above-header-stretch {
+  display: flex;
+  flex-direction: column;
+
+  .stretch {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    width: 100%;
+  }
+
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+
+    slot[name='body']::slotted(*) {
+      max-width: unset;
+      flex-grow: 1;
+    }
+  }
+}
